# whatsapp-wrapped

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORTED_FORMATS.md  agents.md  pyproject.toml  sample_report.html  test_mentions.py  whatsapp_wrapped.ipynb
.github/: FUNDING.yml  update_sample.py
.github/assets/: sample_report.html
config/: config.yaml
src/: __init__.py  analytics.py  charts.py  generator.py  parser.py
src/templates/: report.html
tests/: __init__.py  conftest.py  test_analytics.py  test_cli.py  test_parser.py
tests/data/: README.md
whatsapp_wrapped/: __init__.py  analytics.py  charts.py  generator.py  parser.py
whatsapp_wrapped/templates/: report.html
